@@ -168,7 +168,8 @@ This file is generated! See scripts/mage/docs_collector.go
 |<<metricbeat-metricset-kubernetes-system,system>>   
 |<<metricbeat-metricset-kubernetes-volume,volume>>   
 |<<metricbeat-module-kvm,kvm>>  beta[]   |image:./images/icon-no.png[No prebuilt dashboards]    |  
-.1+| .1+|  |<<metricbeat-metricset-kvm-dommemstat,dommemstat>> beta[]  
+.2+| .2+|  |<<metricbeat-metricset-kvm-dommemstat,dommemstat>> beta[]  
+|<<metricbeat-metricset-kvm-status,status>> beta[]  
 |<<metricbeat-module-logstash,Logstash>>     |image:./images/icon-no.png[No prebuilt dashboards]    |  
 .2+| .2+|  |<<metricbeat-metricset-logstash-node,node>>   
 |<<metricbeat-metricset-logstash-node_stats,node_stats>>   
